<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OthersFeatures.FeedbackActivity">

    <View
        android:id="@+id/customBgTop"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/custom_screen_bg_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feedback_title_txt"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/teamMemberPhoto1"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:scaleType="fitXY"
                android:contentDescription="@string/feedback_screen_bg"
                android:src="@drawable/feedback_img"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rate_experience_title_txt"
                android:textColor="@color/grey"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/teamMemberPhoto1"
                app:layout_constraintTop_toBottomOf="@+id/teamMemberPhoto1" />

            <com.hadi.emojiratingbar.EmojiRatingBar
                android:id="@+id/emojiRatingBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:defaultValue="EMPTY"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:showAllText="true"
                app:showText="true"
                app:titleColor="#844848"
                android:layout_marginTop="16dp"
                tools:layout_editor_absoluteX="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/additionalCommentsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/additional_comments_title_txt"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@+id/emojiRatingBar"
                app:layout_constraintTop_toBottomOf="@+id/emojiRatingBar" />

            <EditText
                android:contentDescription="comment"
                android:id="@+id/additionalCommentsEdt"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:inputType="text|textMultiLine"
                android:layout_marginTop="8dp"
                android:gravity="top"
                android:padding="8dp"
                android:background="@drawable/feedback_edt_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/additionalCommentsTitle"
                android:imeOptions="actionDone"
                android:autofillHints="false"
                android:labelFor="@id/additionalCommentsTitle"
                tools:ignore="LabelFor" />

            <Button
                android:id="@+id/submitFeedbackBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit_btn_txt"
                android:textAllCaps="true"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/deepBlue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/additionalCommentsEdt" />

            <ProgressBar
                android:id="@+id/loadingProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/purple"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.343" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>